rm css from folder 188, add default css, modify defaul html

--- a/CineSeats/default.css
+++ b/CineSeats/default.css
@@ -13,7 +13,7 @@ body {
     height: 100vh;
 }
 
-.profile-container {
+.profile-container_22127188 {
     display: flex;
     align-items: flex-start;
     background-color: #F5F7FA;
@@ -22,7 +22,7 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.profile-header {
+.profile-header_22127188 {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,7 +31,7 @@ body {
     /* giãn cách dữa các elements */
 }
 
-.profile-image {
+.profile-image_22127188 {
     width: 200px;
     height: 200px;
     border-radius: 50%;
@@ -39,7 +39,7 @@ body {
     /* Khoảng cách giữa hình ảnh và nút Facebook */
 }
 
-.Facebook-button {
+.Facebook-button_22127188 {
     background-color: #3b5998;
     color: white;
     border: none;
@@ -50,27 +50,27 @@ body {
     /* Thêm khoảng cách dưới nút Facebook */
 }
 
-.profile-info {
+.profile-info_22127188 {
     width: 300px;
 }
 
-.profile-info h2 {
+.profile-info_22127188 h2 {
     font-size: 24px;
     margin-bottom: 10px;
 }
 
-.input-group {
+.input-group_22127188 {
     margin-bottom: 15px;
 }
 
-.input-group label {
+.input-group_22127188 label {
     display: block;
     font-size: 14px;
     color: #555;
     margin-bottom: 5px;
 }
 
-.input-group input {
+.input-group_22127188 input {
     width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
